[package]
name = "zerossh-do"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
russh = { path = "../russh/russh", default-features = false, features = ["rsa"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
send_wrapper = "0.6"
tokio = { version = "1", features = ["io-util", "sync"] }
log = "0.4"
js-sys = "0.3"
thiserror = "1"
ssh-key = { version = "=0.6.16", features = ["ed25519", "encryption"], package = "internal-russh-forked-ssh-key" }
getrandom = { version = "0.3", features = ["wasm_js"] }
